--- a/index.ipynb
+++ b/index.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,9 +57,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<script>requirejs.config({paths: { 'plotly': ['https://cdn.plot.ly/plotly-latest.min']},});if(!window.Plotly) {{require(['plotly'],function(plotly) {window.Plotly=plotly;});}}</script>"
+      ],
+      "text/vnd.plotly.v1+html": [
+       "<script>requirejs.config({paths: { 'plotly': ['https://cdn.plot.ly/plotly-latest.min']},});if(!window.Plotly) {{require(['plotly'],function(plotly) {window.Plotly=plotly;});}}</script>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.plotly.v1+json": {
+       "data": [
+        {
+         "type": "bar",
+         "uid": "bb76ef62-5bc6-11e9-bbad-7fa09deba9cf",
+         "x": [
+          "Buenos Aires",
+          "Toronto",
+          "Pyeongchang"
+         ],
+         "y": [
+          2891000,
+          2800000,
+          2581000
+         ]
+        }
+       ],
+       "layout": {}
+      },
+      "text/html": [
+       "<div id=\"d5fe160a-1f52-4aaa-a4b4-d9dc4335d1a4\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"d5fe160a-1f52-4aaa-a4b4-d9dc4335d1a4\", [{\"x\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"y\": [2891000, 2800000, 2581000], \"type\": \"bar\", \"uid\": \"bb9a1d02-5bc6-11e9-bbad-7fa09deba9cf\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+      ],
+      "text/vnd.plotly.v1+html": [
+       "<div id=\"d5fe160a-1f52-4aaa-a4b4-d9dc4335d1a4\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"d5fe160a-1f52-4aaa-a4b4-d9dc4335d1a4\", [{\"x\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"y\": [2891000, 2800000, 2581000], \"type\": \"bar\", \"uid\": \"bb9a1d02-5bc6-11e9-bbad-7fa09deba9cf\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "import plotly\n",
     "\n",
@@ -111,11 +155,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "city_indices = None\n",
+    "city_indices = list(range(0,len(cities)))\n",
     "city_indices # [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11]"
    ]
   },
@@ -128,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,19 +211,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['1. Buenos Aires',\n",
+       " '2. Toronto',\n",
+       " '3. Pyeongchang',\n",
+       " '4. Marakesh',\n",
+       " '5. Albuquerque',\n",
+       " '6. Los Cabos',\n",
+       " '7. Greenville',\n",
+       " '8. Archipelago Sea',\n",
+       " '9. Walla Walla Valley',\n",
+       " '10. Salina Island',\n",
+       " '11. Solta',\n",
+       " '12. Iguazu Falls']"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "names_and_ranks = [] \n",
+    "names_and_ranks = []\n",
+    "rank=0\n",
+    "for index in city_indices:\n",
+    "    rank +=1\n",
+    "    names_and_ranks.append(str(rank) + \". \" + city_names[index])\n",
+    "names_and_ranks\n",
+    " \n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'12. Iguazu Falls'"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "names_and_ranks[0] # '1. Buenos Aires'\n",
     "names_and_ranks[1] # '2. Toronto'\n",
@@ -183,20 +278,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[2891000,\n",
+       " 2800000,\n",
+       " 2581000,\n",
+       " 928850,\n",
+       " 559277,\n",
+       " 287651,\n",
+       " 84554,\n",
+       " 60000,\n",
+       " 32237,\n",
+       " 4000,\n",
+       " 1700,\n",
+       " 0]"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "city_populations = []"
+    "city_populations = []\n",
+    "for index in city_indices:\n",
+    "    city_populations.append(cities[index]['Population'])\n",
+    "city_populations"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "city_populations[0] # 2891000\n",
     "city_populations[1] # 2800000\n",
@@ -212,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -225,11 +354,86 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<script>requirejs.config({paths: { 'plotly': ['https://cdn.plot.ly/plotly-latest.min']},});if(!window.Plotly) {{require(['plotly'],function(plotly) {window.Plotly=plotly;});}}</script>"
+      ],
+      "text/vnd.plotly.v1+html": [
+       "<script>requirejs.config({paths: { 'plotly': ['https://cdn.plot.ly/plotly-latest.min']},});if(!window.Plotly) {{require(['plotly'],function(plotly) {window.Plotly=plotly;});}}</script>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.plotly.v1+json": {
+       "data": [
+        {
+         "name": "populations",
+         "text": [
+          "1. Buenos Aires",
+          "2. Toronto",
+          "3. Pyeongchang",
+          "4. Marakesh",
+          "5. Albuquerque",
+          "6. Los Cabos",
+          "7. Greenville",
+          "8. Archipelago Sea",
+          "9. Walla Walla Valley",
+          "10. Salina Island",
+          "11. Solta",
+          "12. Iguazu Falls"
+         ],
+         "type": "bar",
+         "uid": "62defe1e-5bc9-11e9-bbad-7fa09deba9cf",
+         "x": [
+          "1. Buenos Aires",
+          "2. Toronto",
+          "3. Pyeongchang",
+          "4. Marakesh",
+          "5. Albuquerque",
+          "6. Los Cabos",
+          "7. Greenville",
+          "8. Archipelago Sea",
+          "9. Walla Walla Valley",
+          "10. Salina Island",
+          "11. Solta",
+          "12. Iguazu Falls"
+         ],
+         "y": [
+          2891000,
+          2800000,
+          2581000,
+          928850,
+          559277,
+          287651,
+          84554,
+          60000,
+          32237,
+          4000,
+          1700,
+          0
+         ]
+        }
+       ],
+       "layout": {}
+      },
+      "text/html": [
+       "<div id=\"cffc13d6-d1d7-4f17-a43e-6967f984e4f1\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"cffc13d6-d1d7-4f17-a43e-6967f984e4f1\", [{\"name\": \"populations\", \"text\": [\"1. Buenos Aires\", \"2. Toronto\", \"3. Pyeongchang\", \"4. Marakesh\", \"5. Albuquerque\", \"6. Los Cabos\", \"7. Greenville\", \"8. Archipelago Sea\", \"9. Walla Walla Valley\", \"10. Salina Island\", \"11. Solta\", \"12. Iguazu Falls\"], \"x\": [\"1. Buenos Aires\", \"2. Toronto\", \"3. Pyeongchang\", \"4. Marakesh\", \"5. Albuquerque\", \"6. Los Cabos\", \"7. Greenville\", \"8. Archipelago Sea\", \"9. Walla Walla Valley\", \"10. Salina Island\", \"11. Solta\", \"12. Iguazu Falls\"], \"y\": [2891000, 2800000, 2581000, 928850, 559277, 287651, 84554, 60000, 32237, 4000, 1700, 0], \"type\": \"bar\", \"uid\": \"62e3d498-5bc9-11e9-bbad-7fa09deba9cf\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+      ],
+      "text/vnd.plotly.v1+html": [
+       "<div id=\"cffc13d6-d1d7-4f17-a43e-6967f984e4f1\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"cffc13d6-d1d7-4f17-a43e-6967f984e4f1\", [{\"name\": \"populations\", \"text\": [\"1. Buenos Aires\", \"2. Toronto\", \"3. Pyeongchang\", \"4. Marakesh\", \"5. Albuquerque\", \"6. Los Cabos\", \"7. Greenville\", \"8. Archipelago Sea\", \"9. Walla Walla Valley\", \"10. Salina Island\", \"11. Solta\", \"12. Iguazu Falls\"], \"x\": [\"1. Buenos Aires\", \"2. Toronto\", \"3. Pyeongchang\", \"4. Marakesh\", \"5. Albuquerque\", \"6. Los Cabos\", \"7. Greenville\", \"8. Archipelago Sea\", \"9. Walla Walla Valley\", \"10. Salina Island\", \"11. Solta\", \"12. Iguazu Falls\"], \"y\": [2891000, 2800000, 2581000, 928850, 559277, 287651, 84554, 60000, 32237, 4000, 1700, 0], \"type\": \"bar\", \"uid\": \"62e3d498-5bc9-11e9-bbad-7fa09deba9cf\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "import plotly\n",
     "plotly.offline.init_notebook_mode(connected=True)\n",
@@ -245,16 +449,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[4758, 2731, 3194, 200, 491, 3750, 68, 8300, 33, 27, 59, 672]"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "city_areas = []"
+    "city_areas = []\n",
+    "for index in city_indices:\n",
+    "    city_areas.append(cities[index]['Area'])\n",
+    "city_areas"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -263,11 +481,133 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<script>requirejs.config({paths: { 'plotly': ['https://cdn.plot.ly/plotly-latest.min']},});if(!window.Plotly) {{require(['plotly'],function(plotly) {window.Plotly=plotly;});}}</script>"
+      ],
+      "text/vnd.plotly.v1+html": [
+       "<script>requirejs.config({paths: { 'plotly': ['https://cdn.plot.ly/plotly-latest.min']},});if(!window.Plotly) {{require(['plotly'],function(plotly) {window.Plotly=plotly;});}}</script>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.plotly.v1+json": {
+       "data": [
+        {
+         "name": "populations",
+         "text": [
+          "1. Buenos Aires",
+          "2. Toronto",
+          "3. Pyeongchang",
+          "4. Marakesh",
+          "5. Albuquerque",
+          "6. Los Cabos",
+          "7. Greenville",
+          "8. Archipelago Sea",
+          "9. Walla Walla Valley",
+          "10. Salina Island",
+          "11. Solta",
+          "12. Iguazu Falls"
+         ],
+         "type": "bar",
+         "uid": "9d637d08-5bc9-11e9-bbad-7fa09deba9cf",
+         "x": [
+          "1. Buenos Aires",
+          "2. Toronto",
+          "3. Pyeongchang",
+          "4. Marakesh",
+          "5. Albuquerque",
+          "6. Los Cabos",
+          "7. Greenville",
+          "8. Archipelago Sea",
+          "9. Walla Walla Valley",
+          "10. Salina Island",
+          "11. Solta",
+          "12. Iguazu Falls"
+         ],
+         "y": [
+          2891000,
+          2800000,
+          2581000,
+          928850,
+          559277,
+          287651,
+          84554,
+          60000,
+          32237,
+          4000,
+          1700,
+          0
+         ]
+        },
+        {
+         "name": "areas",
+         "text": [
+          "1. Buenos Aires",
+          "2. Toronto",
+          "3. Pyeongchang",
+          "4. Marakesh",
+          "5. Albuquerque",
+          "6. Los Cabos",
+          "7. Greenville",
+          "8. Archipelago Sea",
+          "9. Walla Walla Valley",
+          "10. Salina Island",
+          "11. Solta",
+          "12. Iguazu Falls"
+         ],
+         "type": "bar",
+         "uid": "9d637fd8-5bc9-11e9-bbad-7fa09deba9cf",
+         "x": [
+          "1. Buenos Aires",
+          "2. Toronto",
+          "3. Pyeongchang",
+          "4. Marakesh",
+          "5. Albuquerque",
+          "6. Los Cabos",
+          "7. Greenville",
+          "8. Archipelago Sea",
+          "9. Walla Walla Valley",
+          "10. Salina Island",
+          "11. Solta",
+          "12. Iguazu Falls"
+         ],
+         "y": [
+          4758,
+          2731,
+          3194,
+          200,
+          491,
+          3750,
+          68,
+          8300,
+          33,
+          27,
+          59,
+          672
+         ]
+        }
+       ],
+       "layout": {}
+      },
+      "text/html": [
+       "<div id=\"89fafa6b-def3-48cd-81c4-91d14bc7d6ce\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"89fafa6b-def3-48cd-81c4-91d14bc7d6ce\", [{\"name\": \"populations\", \"text\": [\"1. Buenos Aires\", \"2. Toronto\", \"3. Pyeongchang\", \"4. Marakesh\", \"5. Albuquerque\", \"6. Los Cabos\", \"7. Greenville\", \"8. Archipelago Sea\", \"9. Walla Walla Valley\", \"10. Salina Island\", \"11. Solta\", \"12. Iguazu Falls\"], \"x\": [\"1. Buenos Aires\", \"2. Toronto\", \"3. Pyeongchang\", \"4. Marakesh\", \"5. Albuquerque\", \"6. Los Cabos\", \"7. Greenville\", \"8. Archipelago Sea\", \"9. Walla Walla Valley\", \"10. Salina Island\", \"11. Solta\", \"12. Iguazu Falls\"], \"y\": [2891000, 2800000, 2581000, 928850, 559277, 287651, 84554, 60000, 32237, 4000, 1700, 0], \"type\": \"bar\", \"uid\": \"9d6a0fce-5bc9-11e9-bbad-7fa09deba9cf\"}, {\"name\": \"areas\", \"text\": [\"1. Buenos Aires\", \"2. Toronto\", \"3. Pyeongchang\", \"4. Marakesh\", \"5. Albuquerque\", \"6. Los Cabos\", \"7. Greenville\", \"8. Archipelago Sea\", \"9. Walla Walla Valley\", \"10. Salina Island\", \"11. Solta\", \"12. Iguazu Falls\"], \"x\": [\"1. Buenos Aires\", \"2. Toronto\", \"3. Pyeongchang\", \"4. Marakesh\", \"5. Albuquerque\", \"6. Los Cabos\", \"7. Greenville\", \"8. Archipelago Sea\", \"9. Walla Walla Valley\", \"10. Salina Island\", \"11. Solta\", \"12. Iguazu Falls\"], \"y\": [4758, 2731, 3194, 200, 491, 3750, 68, 8300, 33, 27, 59, 672], \"type\": \"bar\", \"uid\": \"9d6a1190-5bc9-11e9-bbad-7fa09deba9cf\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+      ],
+      "text/vnd.plotly.v1+html": [
+       "<div id=\"89fafa6b-def3-48cd-81c4-91d14bc7d6ce\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"89fafa6b-def3-48cd-81c4-91d14bc7d6ce\", [{\"name\": \"populations\", \"text\": [\"1. Buenos Aires\", \"2. Toronto\", \"3. Pyeongchang\", \"4. Marakesh\", \"5. Albuquerque\", \"6. Los Cabos\", \"7. Greenville\", \"8. Archipelago Sea\", \"9. Walla Walla Valley\", \"10. Salina Island\", \"11. Solta\", \"12. Iguazu Falls\"], \"x\": [\"1. Buenos Aires\", \"2. Toronto\", \"3. Pyeongchang\", \"4. Marakesh\", \"5. Albuquerque\", \"6. Los Cabos\", \"7. Greenville\", \"8. Archipelago Sea\", \"9. Walla Walla Valley\", \"10. Salina Island\", \"11. Solta\", \"12. Iguazu Falls\"], \"y\": [2891000, 2800000, 2581000, 928850, 559277, 287651, 84554, 60000, 32237, 4000, 1700, 0], \"type\": \"bar\", \"uid\": \"9d6a0fce-5bc9-11e9-bbad-7fa09deba9cf\"}, {\"name\": \"areas\", \"text\": [\"1. Buenos Aires\", \"2. Toronto\", \"3. Pyeongchang\", \"4. Marakesh\", \"5. Albuquerque\", \"6. Los Cabos\", \"7. Greenville\", \"8. Archipelago Sea\", \"9. Walla Walla Valley\", \"10. Salina Island\", \"11. Solta\", \"12. Iguazu Falls\"], \"x\": [\"1. Buenos Aires\", \"2. Toronto\", \"3. Pyeongchang\", \"4. Marakesh\", \"5. Albuquerque\", \"6. Los Cabos\", \"7. Greenville\", \"8. Archipelago Sea\", \"9. Walla Walla Valley\", \"10. Salina Island\", \"11. Solta\", \"12. Iguazu Falls\"], \"y\": [4758, 2731, 3194, 200, 491, 3750, 68, 8300, 33, 27, 59, 672], \"type\": \"bar\", \"uid\": \"9d6a1190-5bc9-11e9-bbad-7fa09deba9cf\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "import plotly\n",
     "plotly.offline.init_notebook_mode(connected=True)\n",
@@ -305,7 +645,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
